@@ -1,6 +1,8 @@
 0.20.4
 	bugfix: %GPASS% dictionary markers were ignored in selectboxes
 	bugfix: 802.1Q: better Force10 switches support
+	bugfix: racks, vs, rspools were displayed in search results even if user had no permissions to view them
+	update: vlan search results now include binded IP networks
 	new feature: configurable top-to-bottom units order in particular racks (#601)
 0.20.3 2012-12-19
 	bugfix: DB exception on ports linking (#699)
